--- a/style.css
+++ b/style.css
@@ -1,40 +1,68 @@
-
-.formContainer{
-	display: flex;
-	flex-direction: column;
-	width: 600px;
-	border: 2px solid black;
-	margin: 500px;
+body{
+	background-color: #008080;
 }
-form{
+*{
+	box-sizing: border-box;
+}
+h3{
+	font-size: 50px;
+	text-align: center;
+	color: white;
+}
+.flex-wrapper{
 	display: flex;
-	flex-direction: column;
+	flex-flow: column;
 	justify-content: center;
-	margin-left: 25%;
-	width: 300px;
+	align-items: center;
+	width: 100%;
 }
-footer{
+.add-todo-wrapper{
 	display: flex;
-	flex-direction: row;
-	justify-content: space-between;
+	width: 500px;
+	min-height: 50px;
+	align-items: center;
+	background-color: darkgoldenrod;
+	border-radius: 5px;
+	padding: 10px;
 }
-.image{
-	border-radius: 50px;
-	width: 100px;
-	height: 100px;
-	background-color: aquamarine;
-	display: flex;
-	justify-content: center;
-	margin-left: 250px;
-
+.input-wrapper{
+	width: 100%;
+}
+.input-wrapper input{
+	width: 100%;
+	min-height: 30px;
+}
+.button-wrapper button{
+	font-size: 16px;
+	font-weight: 800;
+	margin-left: 5px;
+	color: red;
+	border-radius: 5px;
 }
 h2{
-	display: flex;
-	justify-content: center;
+	font-size: 30px;
 }
-button{
-	background-color: aquamarine;
-	width: 300px;
-	height: 30px;
-	margin-left: 150px;
+.todo-item{
+	width: 500px;
+	background-color: orange;
+	display: flex;
+	justify-content: space-between;
+}
+.description{
+	padding: 5px;
+	font-size: 20px;
+	font-weight: 1000;
+	letter-spacing: 5px;
+} 
+.btn-complete{
+	width: 20px;
+	height: 20px;
+	padding: 5px;
+}
+.btn-delete{
+	padding: 5px;
+	background-color: plum;
+	color: red;
+	font-size: 20px;
+	font-weight: 800;
 }
